--- a/frontend/src/core/less/colours.less
+++ b/frontend/src/core/less/colours.less
@@ -7,10 +7,10 @@
 /*///////////
 // Default adapt variables. (please don't touch!) If you don't like us then comment us out and edit the colors below!
 /////////*/
-@adapt-primary-color:#34bee0; // light blue (used in most places such as buttons)
-@adapt-secondary-color:#00dd95; // green (used as a secondary button)
-@adapt-tertiary-color:#263944; // dark blue (used in sidebar)
-@adapt-quaternary-color:#36cde8; //
+@adapt-primary-color:#263944; // light blue (used in most places such as buttons) & sidebar
+@adapt-secondary-color:#008055; // green (used as a secondary button)
+@adapt-tertiary-color:#fff;
+@adapt-quaternary-color:#424343; //
 @adapt-white:#fff;
 ////////////
 
@@ -45,12 +45,12 @@
 @navigation-hover-text-color: darken(@navigation-text-color, 2%);
 
 @sidebar-title-text-color: @white;
-@sidebar-color: @tertiary-color;
-@sidebar-text-color: @primary-color;
-@sidebar-item-hover-color: lighten(@tertiary-color, 10%);
+@sidebar-color: @adapt-primary-color;
+@sidebar-text-color: @adapt-tertiary-color;
+@sidebar-item-hover-color: darken(@adapt-primary-color, 10%);
 @sidebar-item-hover-text-color: @white;
 @sidebar-input-text-color: @white;
-@sidebar-input-placeholder-color: #9fa8ad;
+@sidebar-input-placeholder-color: lighten(@adapt-primary-color, 10%);
 @sidebar-input-color: #627178;
 @sidebar-input-border-color: lighten(@sidebar-input-color, 10%);
 @sidebar-input-button-color: @sidebar-input-text-color;
