--- a/frontend/src/modules/location/less/location.less
+++ b/frontend/src/modules/location/less/location.less
@@ -5,7 +5,6 @@
   font-family: @font-title;
   font-size: 14px;
   background-color: @location-background-color;
-  border-bottom: 1px solid fade(@primary-color, 20%);
 
   &-inner {
     color: @location-title;
