--- a/frontend/src/modules/notify/plugins/alert/less/alert.less
+++ b/frontend/src/modules/notify/plugins/alert/less/alert.less
@@ -19,23 +19,24 @@
     text-decoration: none;
     transition: all .3s;
     background-color: transparent;
-    color: #34bee0;
-    border-color: #34bee0;
+    color: @adapt-primary-color;
+    border-color: @adapt-primary-color;
     font-size: 115%;
+
   }
 
   button.swal2-confirm {
     display: inline-block;
     padding: 10px 12px;
     background: none;
-    border: 1px solid #000000;
+    //border: 1px solid #000000;
     border-radius: 3px;
     font-weight: 700;
     text-decoration: none;
     transition: all .3s;
-    background-color: #34bee0;
+    background-color: @adapt-primary-color;
     color: #fff;
-    border-color: #34bee0;
+    //border-color: #34bee0;
     font-size: 115%;
   }
 }
