--- a/frontend/src/modules/user/less/login.less
+++ b/frontend/src/modules/user/less/login.less
@@ -9,6 +9,7 @@
     max-width: 450px;
     margin: 0 auto;
     color: @white;
+    background-color:@adapt-primary-color;
 
     #app {
       margin-left: 0px;
@@ -74,10 +75,18 @@
       border-radius: 4px;
       border: 0;
       padding: 11px 20px;
-      background-color: fade(@white, 40%);
-      color: @white;
+      background-color: @white;
+      color: @primary-color;
       margin-bottom: 5px;
       height: 40px;
+    }
+
+    input#login-input-username::placeholder {
+      color: @primary-color;
+    }
+
+    input#login-input-password::placeholder {
+      color: @primary-color;
     }
 
     input::-webkit-input-placeholder {
